--- a/BlogPessoal/FrontEnd/blogFront/src/app/entrar/entrar.component.html
+++ b/BlogPessoal/FrontEnd/blogFront/src/app/entrar/entrar.component.html
@@ -25,7 +25,7 @@
 
                     <hr class="mt-5 mb-5">
 
-                    <p class="text-center"> Ainda não possui uma conta? <a href="">Cadastre-se</a></p>
+                    <p class="text-center"> Ainda não possui uma conta? <a routerLink= '/cadastrar'>Cadastre-se</a></p>
                 </div>
 
             </div>
@@ -33,4 +33,4 @@
 
 
         <div class="col-md-6" id="img-bg"></div>
-    </div>
+    </div> 
