--- a/BlogPessoal/FrontEnd/blogFront/src/app/cadastrar/cadastrar.component.html
+++ b/BlogPessoal/FrontEnd/blogFront/src/app/cadastrar/cadastrar.component.html
@@ -12,33 +12,33 @@
                 <div class="form-group">
 
                     <label for="Nome">Nome</label>
-                    <input class="form-control" type="text" name="nome" id="nome" placeholder="seu nome">
+                    <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
 
                     <div class="form-group">
 
                         <label for="usuario">Usuario</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario" placeholder="usuario">
+                        <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="usuario">
 
                         <div class="form-group">
 
                             <label for="usuario">Link da foto</label>
-                            <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da foto">
+                            <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Link da foto">
 
                             <div class="form-group">
                                 <label for="senha">Senha</label>
-                                <input class="form-control" type="password" name="senha" id="senha"
+                                <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha"
                                     placeholder="Sua senha">
                             </div>
 
                             <div class="form-group">
                                 <label for="senha">Confirmar senha</label>
-                                <input class="form-control" type="password" name="senha" id="senha"
+                                <input [(ngModel)]='user.senha' class="form-control" type="password" name="senha" id="senha"
                                     placeholder="Confirme sua senha">
                             </div>
 
                             <div class="d-flex justify-content-center">
-                                <button type="submit" class="btn btn-danger ml-4"routerLink= '/entrar'>Cancelar</button>
-                                <button type="submit" class="btn btn-dark">Cadastrar</button>
+                                <button type="submit" class="btn btn-danger ml-4" routerLink='/entrar'>Cancelar</button>
+                                <button type="submit" class="btn btn-dark" (click)='cadastrar()'>Cadastrar</button>
                             </div>
                         </div>
 
