--- a/BlogPessoal/FrontEnd/blogFront/src/app/inicio/inicio.component.html
+++ b/BlogPessoal/FrontEnd/blogFront/src/app/inicio/inicio.component.html
@@ -1,1 +1,19 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+    <div class="row">
+
+        <div class="col-md-6">
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-6">
+                    <h1>Seja bem vinda!</h1>
+                    <h5>Conte aqui a sua história</h5>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="col-md-6">
+
+        </div>
+    </div>
+</div>
